# resync

./: CHANGELOG.md  Cargo.toml  NOTICE.md  NOTICES.md  README.md  debug.sh  git_inline_comments.rs  parsers.md
docs/: README.md  how_resync_works.md  index.md  parsers.md
examples/: README.md
src/: .ecma_notes.md.swp  .main.rs.swp  .parser.rs.swp  check.rs  config.rs  ecma_notes.md  info.rs  lib.rs  main.rs  notes.md  parser.rs  snapshots.rs  sync.rs  tools.rs  types.rs
src/formatters/: mod.rs  porcelain.rs  single_line.rs  terminal.rs
src/parsers/: .typescript.rs.swp  README.md  base.rs  javascript.rs  mod.rs  rust.rs  rust_notes.md  types.rs  typescript.rs
src/parsers/javascript/: comment_parser.rs  mod.rs  parser.rs  visitor.rs
src/parsers/rust/: .parser.rs.swp  .tools.rs.swp  .visitor.rs.swp  mod.rs  parser.rs  tools.rs  visitor.rs
tests/: .typescript.rs.swp  typescript.rs
