[package]
name = "resync"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
quote = "1.0.18"
bat = "0.21.0"
pickledb = " 0.5.1"
dirs = "4.0"
serde = "1.0.137"
git2 = "0.14"
pathdiff = "0.2.1"
aho-corasick = "0.7.18"
rslint_parser = "0.3.1"
swc_common = { version = "0.18.9", features = ["rkyv"] }
swc_ecma_parser = "0.105.7"
swc_ecma_visit = "0.65.0"
swc_ecma_ast = "0.79.0"
walkdir = "2.3.2"
syn = { version = "1.0.91", features = ["full", "extra-traits", "visit", "parsing", "printing"]}
proc-macro2 = { version = "1.0.37", features = ["span-locations"] }
nom = "7.1.1"
nom_locate = "4.0.0"
